--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Portfólio do Evandro</title>
+  <title>Portfólio do Daniel</title>
   <style>
     * {
       box-sizing: border-box;
@@ -12,14 +12,14 @@
 
     body {
       font-family: 'Segoe UI', sans-serif;
-      background-color: #fdfdfd;
+      background-color: #04066b;
       color: #333;
       line-height: 1.6;
     }
 
     header {
-      background-color: #6a1b9a;
-      color: white;
+      background-color: #0430f3;
+      color: rgb(73, 60, 2);
       padding: 40px 20px;
       text-align: center;
     }
@@ -28,7 +28,7 @@
       width: 120px;
       height: 120px;
       border-radius: 50%;
-      border: 4px solid white;
+      border: 4px solid rgb(4, 105, 92);
       margin-bottom: 15px;
     }
 
@@ -39,7 +39,7 @@
     }
 
     section {
-      background-color: #fff;
+      background-color: #f1edf1d5;
       padding: 30px;
       margin-bottom: 30px;
       border-radius: 10px;
@@ -47,7 +47,7 @@
     }
 
     h2 {
-      color: #6a1b9a;
+      color: #430569;
       margin-bottom: 15px;
     }
 
@@ -63,14 +63,14 @@
 
     input, textarea {
       padding: 10px;
-      border: 1px solid #ccc;
+      border: 1px solid #3f0101b6;
       border-radius: 5px;
       font-size: 1em;
     }
 
     button {
       background-color: #6a1b9a;
-      color: white;
+      color: rgb(5, 1, 22);
       border: none;
       padding: 12px;
       border-radius: 5px;
@@ -97,9 +97,9 @@
 <body>
 
   <header>
-   <img src="https://imgur.com/a/fGct7c4.perfil.jpg&quot; alt="Foto de perfil de Evandro">
+   <img src="https://imgur.com/a/fGct7c4.perfil.jpg&quot; alt="Foto de perfil de Daniel">
 
-    <h1>Evandro Ribeiro dos Passos</h1>
+    <h1>Daniel Diefenthaler</h1>
     <p>Desenvolvedor Front-End | Apaixonado por tecnologia e criatividade</p>
   </header>
 
